Fix deferred registry stuff - Starting the instance crashes due to tetra for some reason?